Delete test, course, lesson endpoint and update test added
